# bevy-web-test-rs

./: .gitignore  Cargo.toml  README.md  index.html  release_web.bat
.github/workflows/: rust.yaml
pkg/: bevy_web_test.d.ts  bevy_web_test.js  bevy_web_test_bg.wasm.d.ts
src/: lib.rs  main.rs  systems.rs
src/web_canvas_resizer/: mod.rs
