[package]
name = "bevy-web-test"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.69"
rand = "0.8.3"
integer_scaling = "1.3.2"
serde = "1.0.126"
serde_json = "1.0"
bevy_rapier2d = {version = "0.9.0", features = ["serde-serialize"]} 
anyhow = "1.0"
ron = "0.6.4"
bevy_kira_audio = {version = "0.5.0", features = ["ogg"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = []}
bevy_webgl2 = "0.5.2"
web-sys = {version = "0.3.36", features = ['Window']}


[profile.dev.package."*"]
opt-level = 3